[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = ""
authors = ["Ramanan Sivaranjan <ramanan@funkaoshi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
langchain = "*"
openai = "*"
jq = "^1.6"
chromadb = "*"
loguru = "*"
llama-cpp-python = {extras = ["server"], version = "^0.2.11"}

[tool.poetry.group.dev.dependencies]
black = "~23"
isort = "*"
pre-commit = "~3"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
